--- a/src/pages/basics/01-basic-scene.astro
+++ b/src/pages/basics/01-basic-scene.astro
@@ -5,7 +5,9 @@ import FirstSectionNavbar from '../../components/threejs/FirstSectionNavbar.astr
 
 <Layout title='Threejs 01 - Basic Scene'>
     <FirstSectionNavbar title='Basic Scene' className='container' />
+    <!-- Necesito el canvas con el id webgl para agarrarlos desde el script .ts -->
     <canvas id="webgl"></canvas>
+    <!-- Importo el script -->
     <script src='../../scripts/basics/01-basic-scene.ts'></script>
 </Layout>
 
