--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from '../layouts/Layout.astro'
-import ThreejsLayout from '../layouts/ThreejsLayout.astro'
+//import ThreejsLayout from '../layouts/ThreejsLayout.astro'
 ---
 
 <Layout title='Hi'>
