--- a/src/pages/basics/03-animations.astro
+++ b/src/pages/basics/03-animations.astro
@@ -7,7 +7,7 @@ import FirstSectionNavbar from '../../components/threejs/FirstSectionNavbar.astr
 <Layout title='Threejs 03 - Animations'>
     <FirstSectionNavbar title='Animations' className='container' />
     <canvas id="webgl"></canvas>
-    <script src='../../scripts/basics/03-animations.ts'></script>
+    <script src='../../scripts/basics/03-clock.js'></script>
 </Layout>
 
 
